--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "faker": "^5.5.3",
+    "interactjs": "^1.10.11",
+    "moment": "^2.29.1",
+    "namor": "^2.0.3",
+    "randomcolor": "^0.6.2",
     "react": "^17.0.2",
+    "react-calendar-timeline": "^0.27.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-table": "^7.7.0",
+    "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
