--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "randomcolor": "^0.6.2",
     "react": "^17.0.2",
     "react-calendar-timeline": "^0.27.0",
+    "react-dnd": "^14.0.4",
+    "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
